# senior-design

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  architecture.md  config.yaml  pitch.md  pyproject.toml  rf.md
data/bench/: snr_sweep_20260409_222246.csv
docs/: DEVELOPMENT.md  TESTING.md  architecture.md  linux-setup.md  phase-1-5-rf-validation.md
docs/demo/: sentinel-demo.html
docs/hardware/: b210-notes.md  hackrf-bench-setup.md
docs/rf-research/: drone-emissions.md  rf-primer-for-sentinel.md
radar-app/: package-lock.json  package.json  server.js
radar-app/public/: index.html
report/: SENTINEL_Progress_Report.docx  SENTINEL_Pugh_Chart.xlsx  overview_info_for_report.docx
report/mermaid_diagrams/: fig1_system_architecture.mermaid  fig3_antenna_state_machine.mermaid  fig4_function_decomposition.mermaid  fig7_gantt_chart.mermaid
scripts/: setup-ubuntu.sh
src/antenna/: __init__.py  controller.py
src/dsp/: detector.py  events.py  persistence.py  spectrum.py
src/pipeline/: __init__.py  contracts.py  engine.py
src/sdr/: capture.py  config.py  signals.py
src/ui/: __main__.py  dashboard.py  server.py  spectrum.py
tests/unit/: test_antenna.py  test_bench_test.py  test_config.py  test_contracts.py  test_detector.py  test_events.py  test_hackrf_bench.py  test_hackrf_tx_config.py  test_hackrf_tx_dummy_drone.py  test_hackrf_tx_profiles.py  test_hackrf_tx_synth.py  test_pipeline.py  test_spectrum.py  test_synthetic.py  test_usrp.py
tools/: bench_snr_sweep.py  bench_test.py  hackrf_bench.py  sentinel_runner.py  spectrum_analyzer.py
(+20 files in other folders)
